# zephyr-app

./: .gitignore  CMakeLists.txt  Dockerfile  Kconfig  README.md  west.yml
.github/workflows/: main.yml
app/: CMakeLists.txt  Kconfig  prj.conf
app/src/: main.cpp
app/src/hw/: uart.cpp
app/src/hw/ble/: auth.cpp  ble.cpp
app/src/hw/ble/include/: auth.hpp  ble.hpp
app/src/hw/include/: hw_base.hpp  uart.hpp
app/src/threads/: ble.cpp  nus.cpp  uart.cpp
app/src/threads/include/: thread_base.hpp
app/tests/threads/uart/: CMakeLists.txt  README.md  prj.conf  testcase.yaml
app/tests/threads/uart/mock_hw/include/: uart.h  uart.hpp
app/tests/threads/uart/mock_kernel/: uart.c
app/tests/threads/uart/src/: main.c
boards/arm/my_custom_board/: Kconfig.board  Kconfig.defconfig  my_custom_board-pinctrl.dtsi  my_custom_board.dts  my_custom_board.yaml  my_custom_board_defconfig
scripts/: pipeline-setup.py
